@@ -1,0 +1,11 @@
+<configuration>
+	<components>
+		<component 
+			id="component" 
+			type="Castle.Windsor.Tests.Components.ComponentWithStringProperty, Castle.Windsor.Tests">
+			<parameters>
+				<name><?eval $BaseDirectory?></name>
+			</parameters>
+		</component>
+	</components>		
+</configuration>
